[GitHub] Create Release Action (#57)

--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -11,8 +11,18 @@ on:
 permissions:
     pull-requests: write
     contents: write
+    packages: write
 
 jobs:
+    BuildCreateReleaseImage:
+        name: Build createRelease Action Image
+        uses: ./.github/workflows/github_createAndReleaseActionDockerImage.yml
+        with:
+            actionPath: 'actions/github/createRelease'
+            imageName: 'gh-action-create-github-release'
+        secrets:
+            token: ${{ secrets.GITHUB_TOKEN }}
+
     CreateRelease:
         name: Create Release
         uses: ./.github/workflows/github_createRelease.yml
