--- a/actions/github/jsonDiffAlert/action.yml
+++ b/actions/github/jsonDiffAlert/action.yml
@@ -26,70 +26,12 @@ inputs:
         type: string
         default: ${{ github.workspace }}
 runs:
-    using: 'composite'
-    steps:
-        -   uses: actions/checkout@v4
-            with:
-                repository: ${{github.action_repository}}
-
-        -   name: Setup Go
-            uses: actions/setup-go@v5
-            with:
-                go-version: '>=1.24.1'
-                go-version-file: '${{github.action_path}}/go.mod'
-                cache: true
-                cache-dependency-path: '${{github.action_path}}/go.sum'
-
-        -   name: Generate Main Hash
-            id: mainHash
-            shell: bash
-            run: echo "hash=$(sha256sum ${{github.action_path}}/main.go | cut -d ' ' -f 1)" >> $GITHUB_OUTPUT
-
-        -   name: Generate Module Hash
-            id: moduleHash
-            shell: bash
-            run: echo "hash=$(sha256sum ${{github.action_path}}/go.sum | cut -d ' ' -f 1)" >> $GITHUB_OUTPUT
-
-        -   name: Restore Go Modules Cache
-            uses: actions/cache@v4
-            id: goModuleCache
-            with:
-                path: ~/go/pkg/mod
-                key: ${{ runner.os }}-go-modules-${{ steps.moduleHash.outputs.hash }}
-
-        -   name: Restore Binary Cache
-            uses: actions/cache@v4
-            id: binary-cache
-            with:
-                path: ${{github.action_path}}/action-binary
-                key: ${{ runner.os }}-go-binary-${{ steps.mainHash.outputs.hash }}
-
-        -   name: Tidy Go Modules
-            if: ${{ steps.binary-cache.outputs.cache-hit != 'true' }}
-            shell: bash
-            working-directory: ${{github.action_path}}
-            run: go mod tidy
-
-        -   name: Build Binary
-            if: ${{ steps.binary-cache.outputs.cache-hit != 'true' }}
-            shell: bash
-            working-directory: ${{github.action_path}}
-            run: go build -o ${{github.action_path}}/action-binary main.go
-
-        -   name: Set Execute Permissions on Binary
-            if: ${{ steps.binary-cache.outputs.cache-hit == 'true' }}
-            shell: bash
-            working-directory: ${{github.action_path}}
-            run: chmod +x ${{github.action_path}}/action-binary
-
-        -   name: "Compare JSON Keys and Comment on PR"
-            shell: bash
-            working-directory: ${{github.action_path}}
-            run: ${{github.action_path}}/action-binary
-            env:
-                GH_TOKEN: ${{ inputs.token }}
-                GH_REPOSITORY: ${{ inputs.repository }}
-                PR_NUMBER: ${{ inputs.pullRequestNumber }}
-                SOURCE_FILE: ${{ inputs.sourceFile }}
-                DESTINATION_FILES: ${{ inputs.destinationFiles }}
-                ROOT_DIRECTORY: ${{ inputs.rootDirectory }}
+    using: 'docker'
+    image: 'docker://ghcr.io/encoredigitalgroup/gh-action-json-diff-alert:latest'
+    env:
+        GH_TOKEN: ${{ inputs.token }}
+        GH_REPOSITORY: ${{ inputs.repository }}
+        PR_NUMBER: ${{ inputs.pullRequestNumber }}
+        SOURCE_FILE: ${{ inputs.sourceFile }}
+        DESTINATION_FILES: ${{ inputs.destinationFiles }}
+        ROOT_DIRECTORY: ${{ inputs.rootDirectory }}
