Fix Release Note Generation

--- a/.github/workflows/_github_createAndReleaseActionDockerImage.yml
+++ b/.github/workflows/_github_createAndReleaseActionDockerImage.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
     BuildAndPushDockerImage:
-        name: Build and Push Docker Image
+        name: Build and Push Docker Image (${{inputs.imageName}})
         runs-on: ubuntu-latest
         steps:
             -   name: Checkout
